[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["headers"]}
axum-sessions = "0.5.0"
bcrypt = "0.14.0"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
mongodb = "2.6.0"
nanoid = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
